# renderer3d.rust

./: .gitignore  Cargo.toml  README.md
benches/: rasterizer.rs
docs/: book.toml
docs/iterations/: clear_v1_itermut.rs  clear_v2_fill.rs  clear_v3_copy_from_slice.rs  color_multiply_v1_float.rs  color_multiply_v2_int_shift.rs  interpolate_v1_vec_int.rs  interpolate_v2_vec_float.rs  interpolate_v3_iterator.rs  pixel_queue_v1_vec_ref.rs  pixel_queue_v2_slice.rs  texture_v1_sdl2_color.rs  texture_v2_rgba_modulo.rs  texture_v3_argb_modulo.rs  texture_v4_pow2_unchecked.rs
docs/src/: SUMMARY.md
src/: camera.rs  cli.rs  clipping.rs  cube.rs  display.rs  fire.rs  framebuffer.rs  lib.rs  main.rs  mesh.rs  model.rs  pixel.rs  point.rs  render.rs  scene.rs  triangle.rs  userinput.rs
src/render/: interpolate.rs  line.rs  mod.rs  rasterizer.rs  texture.rs
tests/: model.rs
