[package]
name = "render3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.2.2" # for converting slices from u8 to u32
rustc-hash = "1.1.0"      # fast hashing
#rand = "0.8.4"            # random numbers
fastrand = "2.0.0" # fast random numbers
glam = "0.24.1"    # algebra library
#smallvec = "1.10.0" # small vectors in stack

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png"]

[dependencies.optick]
version = "1.3.4"
#default-features = false
features = []

[dependencies.sdl2]
version = "0.35.2"
#features = ["bundled", "unsafe_textures"] # video, keyboard events
features = ["unsafe_textures"] # video, keyboard events

[profile.release]
#opt-level = 3
lto = true
debug = true
#debug-assertions = false
codegen-units = 1
#panic = "abort"
