[package]
name = "render3d"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "1.2" # for converting slices from u8 to u32
rustc-hash = "2"      # fast hashing
#rand = "0.8.4"            # random numbers
fastrand = "2" # fast random numbers
glam = "0.32"    # algebra library
#smallvec = "1.10.0" # small vectors in stack
clap = { version = "4", features = ["derive"] }

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

#optick = "1.3.4" # disabled: no Linux support

[dependencies.sdl2]
version = "0.38"
#features = ["bundled", "unsafe_textures"] # video, keyboard events
features = ["unsafe_textures"] # video, keyboard events

[profile.release]
#opt-level = 3
lto = true
debug = true
#debug-assertions = false
codegen-units = 1
#panic = "abort"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rasterizer"
harness = false
